--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -1,21 +1,70 @@
-%form#new_item(method="post")
-  =text_field_tag "item[body]"
-%ul#items
-  -for item in @list.items
-    =render :partial => "lists/item", :object => item
+#list
+  %h3#info
+    #name
+      =h(@list.name)
+    -form_for @list, :url => list_path(@list, :format => :js), :html => {:style => "display:none"} do |form|
+      =form.text_field :name
+      =form.submit "change list name"
+
+  %form#new_item(method="post")
+    =text_field_tag "item[body]"
+    =submit_tag "add item"
+  %ul#items(style="padding:5px")
+    -for item in @list.items
+      =render :partial => "lists/item", :object => item
         
 :javascript
   $(document).ready(function() {
+    var new_item_body = $("#new_item #item_body");
+    new_item_body.focus();
+    
     $("#new_item").submit(function(e) {
       e.preventDefault();
       var url = "#{list_items_path(@list, :format => :js)}";
       $.post(url, $(e.currentTarget).serialize(), function(data) {
         $("#items").append(data);
+        new_item_body.val('');
       });
     });
     
-    $("#items").sortable({axis:"y", containment:'parent', cursor:'move', update:function(event, ui) {
+    $("#items").sortable({axis:"y", cursor:'move', update:function(event, ui) {
       var data = {items : $("#items").sortable('toArray')};
       $.post("#{reorder_list_items_path(@list)}", data);
     }});
+    
+    $(".item").dblclick(function(e) {
+      var form = $(this).find("form:first"),
+          body = $(this).find(".body:first"),
+          field = form.find(".item_body:first");
+          
+      body.hide();
+      form.show();
+      field.focus();
+      
+      form.submit(function(event) {
+        event.preventDefault();
+        $.post(form.attr("action"), form.serialize(), function(data) {
+          body.text(data.body);
+          form.hide();
+          body.show();
+        }, "json");
+      });
+      field.blur(function() {
+        form.submit()});
+    });
+    
+    $("#info:first").dblclick(function(e) {
+      var name = $(this).find("#name"),
+          form = $(this).find("form:first");
+      name.hide();
+      form.show();
+      form.submit(function(formEvent) {
+        formEvent.preventDefault();
+        $.post(form.attr("action"), form.serialize(), function(data) {
+          name.text(data.name);
+          form.hide();
+          name.show();
+        }, "json");
+      });
+    });
   });
