--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -63,6 +63,145 @@ a img {
 }
 
 /* line 10, ../../../app/stylesheets/screen.scss */
-#list #items .item {
+body #container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+}
+/* line 14, ../../../app/stylesheets/screen.scss */
+body #container #header {
+  overflow: hidden;
+  display: inline-block;
+  background-color: #ddd;
+  padding: 16px;
+  margin-bottom: 1px;
+}
+/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
+body #container #header {
+  display: block;
+}
+/* line 19, ../../../app/stylesheets/screen.scss */
+body #container #header #account {
+  float: right;
+}
+
+/* line 26, ../../../app/stylesheets/screen.scss */
+.formtastic {
+  background-color: #ddd;
+  padding: 16px;
+}
+/* line 29, ../../../app/stylesheets/screen.scss */
+.formtastic label {
+  display: block;
+}
+/* line 32, ../../../app/stylesheets/screen.scss */
+.formtastic input[type="text"] {
+  width: 458px;
+}
+
+/* line 41, ../../../app/stylesheets/screen.scss */
+.nav {
+  overflow: hidden;
+  display: inline-block;
+  padding: 1.5em 0 1.5em 0;
+}
+/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
+.nav {
+  display: block;
+}
+/* line 45, ../../../app/stylesheets/screen.scss */
+.nav .new_list.button {
+  padding: 0.8em;
+  background-color: #888;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+/* line 55, ../../../app/stylesheets/screen.scss */
+#lists {
+  overflow: hidden;
+  display: inline-block;
+}
+/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
+#lists {
+  display: block;
+}
+/* line 57, ../../../app/stylesheets/screen.scss */
+#lists .list {
+  overflow: hidden;
+  display: inline-block;
+  padding: 1em;
+  margin-bottom: 1px;
+  background-color: #ddd;
+}
+/* line 8, ../../../vendor/gems/compass-0.10.2/frameworks/compass/stylesheets/compass/utilities/general/_hacks.scss */
+#lists .list {
+  display: block;
+}
+/* line 63, ../../../app/stylesheets/screen.scss */
+#lists .list .handle {
+  float: right;
+  background-color: #888;
+  color: #fff;
+  font-size: 0.5em;
+  padding: 0.5em;
   cursor: move;
+  margin-right: 0.5em;
+}
+
+/* line 76, ../../../app/stylesheets/screen.scss */
+#list #info {
+  text-align: center;
+}
+/* line 78, ../../../app/stylesheets/screen.scss */
+#list #info #name {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 1em;
+}
+/* line 83, ../../../app/stylesheets/screen.scss */
+#list #info #name:hover {
+  background-color: #ddd;
+}
+/* line 86, ../../../app/stylesheets/screen.scss */
+#list #info form {
+  background-color: #ddd;
+  padding: 1em;
+}
+/* line 89, ../../../app/stylesheets/screen.scss */
+#list #info form input[type="text"] {
+  display: block;
+  width: 458px;
+}
+/* line 95, ../../../app/stylesheets/screen.scss */
+#list form#new_item {
+  text-align: center;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+/* line 99, ../../../app/stylesheets/screen.scss */
+#list form#new_item #item_body {
+  width: 300px;
+}
+/* line 103, ../../../app/stylesheets/screen.scss */
+#list #items {
+  padding: 0px;
+}
+/* line 105, ../../../app/stylesheets/screen.scss */
+#list #items .item {
+  background-color: #777;
+  color: #fff;
+  padding: 0.8em;
+  margin-bottom: 1px;
+  cursor: move;
+  font-size: 0.8em;
+}
+/* line 112, ../../../app/stylesheets/screen.scss */
+#list #items .item .body {
+  cursor: move;
+}
+/* line 115, ../../../app/stylesheets/screen.scss */
+#list #items .item input[type="text"] {
+  width: 470px;
 }
