--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -4,11 +4,117 @@
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
 @import "compass/reset";
+@import "compass/utilities";
+
+body {
+  #container {
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    #header {
+      @include clearfix;
+      background-color: #ddd;
+      padding: 16px;
+      margin-bottom: 1px;
+      #account {
+        float: right;
+      }
+    }
+  }
+}
+
+.formtastic {
+  background-color: #ddd;
+  padding: 16px;
+  label {
+    display: block;
+  }
+  input[type="text"] {
+    width: 458px;
+  }
+}
+
+form#new_user {
+  
+}
+
+.nav {
+  @include clearfix;
+  padding: 1.5em 0 1.5em 0;
+//    margin: 1em 0 1em 0;
+  .new_list.button {
+    padding: 0.8em;
+    background-color: #888;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+}
+
+
+#lists {
+  @include clearfix;
+  .list {
+    @include clearfix;
+    padding: 1em;
+//    padding-bottom: 1.2em;
+    margin-bottom: 1px;
+    background-color: #ddd;
+    .handle {
+      float: right;
+      background-color: #888;
+      color: #fff;
+      font-size: 0.5em;
+      padding: 0.5em;
+      cursor: move;
+      margin-right: 0.5em;
+    }
+  }
+}
 
 #list {
+  #info {
+    text-align: center;
+    #name {
+      font-size: 1.5em;
+      font-weight: bold;
+      margin-top: 1em;
+    }
+    #name:hover {
+      background-color: #ddd;
+    }
+    form {
+      background-color: #ddd;
+      padding: 1em;
+      input[type="text"] {
+        display: block;
+        width: 458px;
+      }
+    }
+  }
+  form#new_item {
+    text-align: center;;
+    margin-bottom: 1em;
+    margin-top: 1em;
+    #item_body {
+      width: 300px;
+    }
+  }
   #items {
+    padding: 0px;
     .item {
-     cursor: move; 
+      background-color: #777;
+      color: #fff;
+      padding: 0.8em;
+      margin-bottom: 1px;
+      cursor: move;
+      font-size: 0.8em;
+      .body {
+        cursor: move;
+      }
+      input[type="text"] {
+        width: 470px;
+      }
     }
   }
 }
