--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,4 @@
 -semantic_form_for @user do |form|
   =render :partial => "users/form", :object => form
   -form.buttons do
-    =form.commit_button "sign up instantly"
+    =form.commit_button "update"
