--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
   %body
     #container
       #header
-        =link_to "my lists", lists_path
+        =link_to "my lists", lists_path if current_user
         #account
           -if current_user
             =link_to h(current_user.username), edit_user_path
