Fixed edit user form.  Fixed edit item form.

--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -2,5 +2,6 @@
   .complete
   .body
     =h(item.body)
-  -form_for item, :html => {:style => "display:none"} do |form|
+    (#{item.list.name})
+  -form_for [@list, item], :html => {:style => "display:none"} do |form|
     =form.text_field :body, :class => "item_body"
