--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -1,7 +1,12 @@
-%li.item{:id => item.id, :class => "#{'complete' if item.complete}"}
-  =check_box_tag "item[complete]", "1", item.complete, :class => "item_complete"
-  .body
-    =h(item.body)
-  =link_to 'x', list_item_path(@list, item), :method => :delete, :confirm => 'Are you sure?', :class => 'delete button'
-  -form_for [@list, item], :html => {:style => "display:none"} do |form|
-    =form.text_field :body, :class => "item_body"
+%a.item{:id => item.id, :class => "#{'complete' if item.complete}"}
+  %table
+    %tr
+      %td.left
+        =check_box_tag "item[complete]", "1", item.complete, :class => "item_complete"
+      %td.center
+        .body
+          =h(item.body)
+        -form_for [@list, item], :html => {:style => "display:none"} do |form|
+          =form.text_field :body, :class => "item_body"
+      %td.right
+        =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete?', :class => 'delete button'
