--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -17,6 +17,7 @@
     -for item in @list.items
       -if item.complete
         =render :partial => "lists/item", :object => item
+  #hint hint: double-click an item to edit
         
 :javascript
   $(document).ready(function() {
@@ -32,7 +33,7 @@
       });
     });
     
-    $("#items").sortable({axis:"y", update:function(event, ui) {
+    $("#items").sortable({axis:"y", cursor:'url(/images/grabbing.png)', containment:'parent', tolerance:'pointer', update:function(event, ui) {
       var data = {items : $("#items").sortable('toArray')};
       $.post("#{reorder_list_items_path(@list)}", data);
     }});
